# CrowPanelSerialTerm

./: README.md  platformio.ini  sdkconfig.defaults.esp32s3
include/: LovyanGFX_Driver.h  pins_config.h
lib/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_WifiSettings.c  ui_WifiSettings.h  ui_comp_hook.c  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1149142576.c  ui_img_1156566852.c  ui_img_1659073291.c  ui_img_1845835166.c  ui_img_197579651.c  ui_img_376556310.c  ui_img_548092219.c  ui_img_back_png.c  ui_img_backblue800x480_png.c  ui_img_home_png.c  ui_img_wifi_png.c  ui_img_wifiapp_png.c  ui_serialTerm.c  ui_serialTerm.h  ui_themes.c  ui_themes.h
src/: main.cpp
